<resources>
    <string name="app_name">Wake On LAN</string>
    <string name="action_settings">Settings</string>
    <string name="action_launch_reqs">Test PC Wake-Up</string>
    <string name="settings_lean_more_wol">Learn more about wake-on-LAN</string>
    <string name="wiki_article_url">https://en.wikipedia.org/wiki/Wake-on-LAN</string>
    <string name="github_url">https://github.com/JediMaster93/Android-Wake-On-Lan</string>
    <string name="settings_visit_github">Github </string>
    <string name="how_to_setup">How to setup Wake-On-Lan</string>
    <string name="google_url">http://lmgtfy.com/?q=how+to+set+up+wake+on+lan#</string>
    <string name="transition">transition</string>
    <string name="edit">Edit</string>
    <string name="discard">Discard</string>
    <string name="save">save</string>
    <string name="pc_name">PC Name</string>
    <string name="mac_address">Mac Address</string>
    <string name="intro_welcome">Welcome to Wake On Lan!</string>
    <string name="intro_description1">Your PC will wake up automatically when you get in wifi range!</string>
    <string name="intro_title_2">First setup your PC to recieve magic packets</string>
    <string name="special_thanks"><u>Special Thanks</u></string>
    <string name="appintro_thanks">• Paolo Rotolo for AppIntro library</string>
    <string name="appintro_link">https://github.com/PaoloRotolo/AppIntro</string>
    <string name="dbmanager_thanks">• Sanath Kumar for Database Manager</string>
    <string name="gagro_thanks">• Goran Gagro for testing</string>
    <string name="torma_thanks">• Daniel Torma for testing</string>
    <string name="wol_version">Wake On Lan 1.0</string>
    <string name="about">About</string>
    <string name="dbmanager_link"> https://github.com/sanathp/DatabaseManager_For_Android</string>
    <string name="action_share_app">Share App Link</string>
    <string name="app_playstore_link">http://play.google.com/store/apps/details?id=com.teamgy.wakeonlan</string>
    <string name="first_time_checkbox_message">PC will not turn on when you get in wifi range.</string>
    <string name="second_time_checkbox_message">PC will turn on when you get in wifi range.</string>
    <string name="key_quiet_hours_enabled">quietHoursEnabled</string>
    <string name="key_time_start">timeStart</string>
    <string name="settings_quiet_wol_start">Quiet hours start</string>
    <string name="settings_quiet_wol_end">Quiet hours end</string>
    <string name="key_time_end">key_time_end</string>
    <string name="launch_itro">Intro</string>
    <string name="intro_summary">Launch intro again</string>
    <string name="switch_wifi_range">Wake up on wifi connect</string>
    <string name="switch_timed_alarm">Wake up on clock alarm</string>
    <string name="monday_short">M</string>
    <string name="tuesday_short">T</string>
    <string name="wendsay_short">W</string>
    <string name="thursday_short">T</string>
    <string name="friday_short">F</string>
    <string name="sunday_short">S</string>
    <string name="saturday_short">S</string>
    <string name="widget_preference_file_key">com.teamgy.wakeonlan.widgetData</string>
    <string name="saved_widget_data">saved_widget_data_prefs</string>
    <string name="pref_description_retry_amount">WOL retry amount</string>
    <string name="key_pref_retry_amount">key_pref_retry_amount</string>
    <string name="key_pref_wol_port">key_pref_wol_port</string>
    <string name="pref_description_wol_port">WOL port</string>


</resources>
